<resources>
    <string name="app_name">Mand</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="login">LOG IN</string>
    <string name="register">SIGN UP</string>
    <string name="exit">Exit</string>
    <string name="login_text">Log in to your account:</string>
    <string name="register_text">Create a new account:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="phone_edit">change phone</string>
    <string name="about_yourself">About yourself:</string>
    <string name="about_yourself_edit">change status</string>
    <string name="sex">Gender:</string>
    <string name="sex_edit">change gender</string>
    <string name="general">General</string>
    <string name="additional">Additional</string>
    <string name="dateBirth">Birthday:</string>
    <string name="dateBirth_edit">change date of birth</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="nickname">Username:</string>
    <string name="nickname_edit">change username</string>
    <string name="greeting">Hello</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="profile_inf">Profile:</string>
    <string name="chats">Chats</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="tab_theme">Change tab_theme</string>
    <string name="choose_avatar">Choose an avatar</string>
    <string name="logout">Logout:</string>
    <string name="logout_text">Are you sure you want to sign out?</string>
    <string name="to_delete">Delete message:</string>
    <string name="delete_text">Are you sure you want to delete this message?</string>
    <string name="deleted">Deleted</string>
    <string name="message">Message…</string>
    <string name="bye">Goodbye!</string>
    <string name="successful">Successful</string>
    <string name="auth_fail">Authentication failed! Perhaps a user with such mail exists.</string>
    <string name="auth_fail_short">Authentication failed.</string>
    <string name="auth_suc">Authentication success.</string>
    <string name="error_base">Authentication failed! There is no such user in database.</string>
    <string name="error_smth">Error</string>
    <string name="error_email">Error! A user with such email does not exist in the database.</string>
    <string name="no_image_select">No image selected</string>
    <string name="input_fields">Please, fill in all items!</string>
    <string name="input_email">Please, input your email!</string>
    <string name="password_min">Password must contain at least 7 characters!</string>
    <string name="password_max">Passwords must not exceed 34 characters!</string>
    <string name="password_match">Passwords don not match!</string>
    <string name="input_name">Please, enter your nickname!</string>
    <string name="name_max">Sorry, your nickname must not exceed 20 characters!</string>
    <string name="new_mess_from">New message from </string>
    <string name="click_to">Click to read the message</string>
    <string name="settings">Settings</string>
    <string name="soon">Something will appear here soon…</string>
    <string name="internet_connection">An error occurred while loading data. Please check your internet connection.</string>
    <string name="upload">Upload in progress…</string>
    <string name="search">Search</string>
    <string name="noUsers">Strange, but no new users were found…</string>
    <string name="noChats">Hmm… You haven\'t started a chat with anyone lately. Start a new conversation in the \"Users\" tab!</string>
    <string name="noSearch">The user with the given name does not exist in the database.</string>
    <string name="Seen">Seen</string>
    <string name="Delivered">Delivered</string>
    <string name="addInf">Additional info:</string>
    <string name="dateCR">Date of registration:</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="reset">Reset</string>
    <string name="title_reset">Enter your email to reset your password:</string>
    <string name="check_email">Successful! Please, check your mailbox.</string>
    <string name="password_change">Change password:</string>
    <string name="password_change_question">By clicking YES, you consent to sending you a letter, containing further instructions for changing the password.</string>
    <string name="you">You:</string>
    <string name="photo">📷 photo</string>
    <string name="null_message">You can not send an empty message.</string>
    <string name="open_photo">Open photo</string>
    <string name="change_photo">Change photo</string>
    <string name="delete_photo">Delete photo</string>
    <string name="take_photo">Take photo</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="at">at</string>
    <string name="id">ID:</string>
    <string name="sign_google">Sign in with Google</string>
    <string name="online">online</string>
    <string name="lastSeen">Last seen</string>
    <string name="no_info">...</string>
    <string name="start_chatting_title">Create a conversation</string>
    <string name="start">start</string>
    <string name="start_chatting_q">Create a new chat with such user?</string>

    <string-array name="system_language">
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <string-array name="system_language_alias">
        <item>"ru"</item>
        <item>"en"</item>
    </string-array>
    <string name="title_activity_zoom">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>

</resources>