<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chats">

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.messenger.mand.Fragments.ChatsFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.messenger.mand.Fragments.UsersFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.messenger.mand.Fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>