<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:passwordToggleEnabled="true"
    app:hintEnabled="false"
    android:theme="@style/AppThemeLight"
    android:background="#FFFFFF"
    android:id="@+id/scrollLogin"
    tools:context=".Activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LinearLayoutSignIn"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:screenOrientation="portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/toolbar_dropshadow"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/LoginText"
        android:textSize="22sp"
        android:text="@string/login_text"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ImageViewLogin"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animation_walking_man_with_dog"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="2dp"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/ImageViewLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/padding_start"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeWidth="2dp"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/til1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding_start"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="16dp"
            android:padding="12dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:screenOrientation="portrait"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:rippleColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/til2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/recoveryPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgotPassword"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:clickable="true"
            android:textColor="@color/colorRed"
            android:paddingBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>