<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_gravity="center_vertical"
    android:isScrollContainer="true"
    android:nestedScrollingEnabled="false"
    android:theme="@style/AppThemeLight"
    android:id="@+id/scrollStart"
    tools:context=".Activities.StartActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:layout_gravity="fill_vertical">

    <ImageView
        android:id="@+id/start_image"
        android:layout_gravity="center_vertical"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/start_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="170dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        app:icon="@drawable/ic_key"
        app:iconGravity="textStart"
        app:iconSize="27dp"
        app:cornerRadius="@dimen/corner_radius"
        android:textColor="@android:color/white"
        app:rippleColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_image"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        android:layout_width="170dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:cornerRadius="@dimen/corner_radius"
        android:text="@string/register"
        app:icon="@drawable/ic_person_registration"
        app:iconGravity="textStart"
        android:textColor="@android:color/white"
        app:rippleColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:elevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"/>

        <View
            android:id="@+id/additionalSpace"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:layout_constraintTop_toBottomOf="@+id/register"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/exit"
            app:cornerRadius="14dp"
            android:textColor="@android:color/white"
            app:rippleColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:elevation="8dp"
            app:backgroundTint="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/additionalSpace"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>