<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:isScrollContainer="true"
    tools:context=".activities.RecoverPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/bar_layout"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/resetText"
            android:textSize="22sp"
            android:text="@string/title_reset"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/passwordResetAnim"
            android:forceDarkAllowed="false"
            android:backgroundTint="@color/colorBackground"
            android:background="@color/colorBackground"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/resetText"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_speed="0.7"
            app:lottie_rawRes="@raw/anim_email"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:forceDarkAllowed="false"
            android:textColorHint="@color/colorHintETStart"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:startIconDrawable="@drawable/ic_mail_fill"
            app:startIconTint="@color/colorIconsStart"
            app:boxBackgroundColor="@color/colorBackgroundET"
            app:hintTextColor="@color/colorHintETStart"
            app:boxStrokeColor="@color/colorHintETStart"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="3dp"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/passwordResetAnim"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sendEmailToRecover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/cursor"
                android:paddingStart="@dimen/padding_start"
                android:paddingEnd="@dimen/padding_start"
                android:textSize="@dimen/size_txt_field"
                android:textColor="@android:color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="16dp"
            android:padding="12dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:screenOrientation="portrait"
            android:text="@string/reset"
            android:backgroundTint="@color/colorBigBtn"
            android:textColor="@android:color/white"
            app:rippleColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:insetBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/til1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>